<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hobo Signs</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <!-- Options Menu -->
    <string name="action_settings">Settings</string>
    <string name="my_signs">My Signs</string>
    <string name="all_signs">All Signs</string>
    <string name="logout">Logout</string>

    <!-- Login Screen -->
    <string name="username_label">Username:</string>
    <string name="username_hint">Enter username</string>
    <string name="password_label">Password:</string>
    <string name="password_hint">Enter password</string>
    <string name="login_button">Login</string>

    <!-- Sign Map -->
    <string name="title_activity_sign_map">SignMapActivity</string>
    <string name="drop_sign_button">Drop a Sign</string>

    <!-- User Settings -->
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="curr_username_label">Username:</string>
    <string name="radius_label">Search Radius in Meters:</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save Changes</string>

    <!-- My Signs -->
    <string name="title_activity_my_signs">MySignsActivity</string>

    <!-- Filters -->
    <string name="filter_apply_button">Apply Filters</string>
    <string name="filter_reset_button">Reset Filters</string>
    
    <!-- Sign List Items -->
    <string name="item_caption_label">"Caption: "</string>
    <string name="item_loc_label">"Location: "</string>
    <string name="item_date_label">"Created on: "</string>
    <string name="item_dist_label">"Distance: "</string>
    <string name="item_dist_unit">" meter(s)"</string>
    
    <string name="Capture">Capture</string>

</resources>